kafka consumer added to nodejs backend

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -26,7 +26,7 @@
       <h1>Logs</h1>
       <ul id="chat">
       </ul>
-      <!-- <input id="message" type="text" placeholder="Type something"/> -->
+      <input id="message" type="text" placeholder="Type something"/>
     </div>
 
     <!-- build:js scripts/vendor.js -->
